ViTables ChangeLog
==================
** July 28, 2009 **
A simple plugin framework has been implemented.

** July 21, 2009 **
The "Node properties" dialog is generated automatically (via Qt Designer) now.

** May 01, 2009 **
Added missing licensing information to several files.

Sources of Users Guide are now distributed in the ViTables tarball.

Procedure for generating the usersguide has been updated.

INSTALL.txt and setup.py have been updated.

HTML documentation uses utf-8 encoding now.

** March 11, 2009 **
Code for creating DBDoc objects was confusing and has been refactored.

Added a couple of (subtle) usability improvements.

** March 10, 2009 **
The Preferences subpackage has been updated.

Fixed a small bug in the "Select a file for opening" dialog.

** March 08, 2009 **
New utility function added to utils.py module.

Table queries are done in a separated execution thread now.

** March 05, 2009 **
The "New query" dialog is generated automatically (via Qt Designer) now.

** March 04, 2009 **
Some subpackages have been reorganised.

** March 02, 2009 **
__tr method has changed.

Attributes editing has been debugged and simplified.

Unneeded encoding/decoding of strings has been removed.

** March 01, 2009 **
The main menu bar has been reorganised.

** Feb 26, 2009 **
New feature added: export a dataset to plain text file with CSV format.

Fixed a unicode bug in the queries manager.

** Feb 24, 2009 **
The resources module has been added to the repository.

A couple of Makefile files have been changed.

** Feb 23, 2009 **
setup.py has been updated.

Code dealing with formatting time series has been refactored.

**Feb 21, 2009**
License files and license notes have been updated.

Fixed a little bug in the time_series plugin.

The examples foder has been reorganized.

Support for unicode filenames has been improved.

Fixed a silly bug in the time_series plugin.

Focus indicators for the logger and the tree panel have been improved.
